--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1> Hello World!</h1>
 <p>This is the first file in my new Git Repo.</p>
+<p>This is a new line in my file</p>
 </body>
 </html>
