--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <h1> Hello World!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is a new line in my file</p>
+<div><img src ="image_hello.jpeg" alt ="Hello World from sapce"
+style = "width:100%;max-width:960px"></div>
+<p>This is the first file in my new Git Repo.</p>
+<p> A new line in our file!</p>
 </body>
 </html>
