added new changes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h1> Hello World!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is a new line in my file</p>
+<p>This line is to show how merging works</p>
 </body>
 </html>
